<resources>
    <string name="app_name">Film Zone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="searchbar_hint">busca una película...</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="correo">Correo:</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="email">EMAIL</string>
    <string name="username">USERNAME</string>
    <string name="name">FIRST NAME</string>
    <string name="lastName">LAST NAME</string>
    <string name="password">PASSWORD</string>
    <string name="repeatPassword">REPEAT PASSWORD</string>
    <string name="loginChange">Log In</string>
    <string name="account">Already have an account?</string>
    <string name="registerChange">Sign In</string>
    <string name="register">Don\'t have an account yet?</string>
    <string name="editProfile">Editar perfil</string>
    <string name="editPhoto">Editar foto</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="foto_existente">Elegir foto existente</string>
    <string name="item_que_representa_una_pel_cula">item que representa una película</string>
    <string name="pel_culas_destacadas">Películas destacadas</string>
    <string name="titulo">Título</string>
    <string name="original_title">Titulo original</string>
    <string name="directed_by">DIRECTED BY</string>
    <string name="director_name">Director</string>
    <string name="year">Año</string>
    <string name="duracion">Duracion</string>
    <string name="trailer">TRAILER</string>
    <string name="tagline">Tagline</string>
    <string name="overview">Overview</string>
    <string name="cast_crew">Cast + Crew</string>
    <string name="genre">Genre</string>
    <string name="cast">CAST</string>
    <string name="crew">CREW</string>
    <string name="character">Character</string>
    <string name="job">Job</string>
    <string name="generos_pelicula">Géneros</string>
    <string name="watch">Watch</string>
    <string name="like">Liked</string>
    <string name="watchlist">Watchlist</string>

     <string name="login_google">Login with Google</string>
    <string name="register_google">Register with Google</string>
    <string name="default_web_client_id">project-577907861011</string>

</resources>