<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.perfil.PerfilFragment"
    android:padding="10dp">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/circle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/circular_button"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/textEditPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editPhoto"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

        <EditText
                android:id="@+id/editTextNombreUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/saveChange"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_check_24" />

</GridLayout>
