<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/background"
    android:padding="10dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.perfil.PerfilFragment">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/circle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/circular_button"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/textFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditProfile"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:foregroundTint="@color/blue"
            android:backgroundTint="@color/ash_gray"
            android:text="@string/editProfile"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <!--<Button
                android:id="@+id/buttonWatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent" />-->

            <Button
                android:id="@+id/buttonLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent" />

            <Button
                android:id="@+id/buttonWatchlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watchlist"
                android:textSize="20sp"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movieFavFilmas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="70dp">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/movieWatchFilmas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="70dp">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/movieWatchlistFilmas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="70dp">
        </LinearLayout>

    </GridLayout>

</ScrollView>
